k8s/k3d/simple-api-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-api-ingress
  namespace: api
spec:
  ingressClassName: "nginx"
  rules:
  - host: "simple-api.127.0.0.1.sslip.io"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: simple-api-svc
            port:
              number: 8080
